example/nginx/my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my.test.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
